--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /.env
 /helm/api-platform/charts/*
 !/helm/api-platform/charts/.gitignore
-/node_modules
+/node_modules/
+/vendor/
+composer.*
+package.json
+yarn.lock
